# submission-summary-viewer

./: Cargo.toml  Makefile  README.md  build.rs  installer.nsi
.github/workflows/: release.yml
resources/: submission-summary-viewer.desktop  testsubmissionsummary.csv
src/: main.rs  submission_summary.rs
